--- a/app/main/views/nation_continent/nation_continent.html
+++ b/app/main/views/nation_continent/nation_continent.html
@@ -34,7 +34,10 @@
             </div>
             <div class="x_content">
                 <div class="alert alert-success" ng-if="success">
-                    <strong>Tạo thành công!</strong>
+                    <strong>{{successMessage}}</strong>
+                </div>
+                <div class="alert alert-danger" ng-if="danger">
+                    <strong>{{errorMessage}}</strong>
                 </div>
                 <form class="form-horizontal form-label-left collapse" id="add_nation">
                     <ul class="nav navbar-right panel_toolbox">
@@ -89,6 +92,8 @@
                                 <!-- </th> -->
                                 <th class="column-title">Châu Lục </th>
                                 <th class="column-title">Số Quốc Gia</th>
+                                <th>Sửa</th>
+                                <th>Xóa</th>
                                 <!-- <th class="column-title no-link last"><span class="nobr">Action</span> -->
                                 <!-- </th> -->
                             </tr>
@@ -98,11 +103,90 @@
                                 <!-- <td class="a-center "> -->
                                 <!-- <input type="checkbox" class="flat" name="table_records"> -->
                                 <!-- </td> -->
-                                <td class=" ">{{continent.continentName}}</td>
-                                <td class=" ">{{continent.nation.length}}</td>
+                                <td class=" " id="continent_{{continent.id}}">{{continent.continentName}}</td>
+                                <td data-toggle="modal" data-target="#view_nation" ng-click="showNation(continent)">
+                                    <a class="cursor">{{continent.nation.length}}</a>
+                                </td>
+                                <td class=" ">
+                                    <i id="edit_continent_{{continent.id}}" class="fa fa-edit cursor" ng-click="editContinent(continent.id); edit_continent = true"></i>
+                                    <i id="save_edit_continent_{{natcontinention.id}}" class="fa fa-save cursor" ng-click="saveEditContinent(continent.id)" ng-if="edit_continent"></i>
+                                </td>
+                                <td class=" ">
+                                    <i class="fa fa-trash cursor" data-toggle="modal" data-target="#delete_continent" ng-click="comfirmDelete(continent.id)"></i>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="view_nation">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel2">{{Continent.continentName}}</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="alert alert-danger" ng-if="danger_edit">
+                                    <strong>{{errorMessage}}</strong>
+                                </div>
+                                <div class="alert alert-success" ng-if="successdelete_edit">
+                                    <strong>{{successMessage}}</strong>
+                                </div>
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <!-- <th>#</th> -->
+                                            <th>Quốc gia</th>
+                                            <th>Sửa</th>
+                                            <th>Xóa</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="nation in Continent.nation" id="tr_nation_{{nation.id}}">
+                                            <!-- <th scope="row">{{typeContract.id}}</th> -->
+                                            <td id="nation_{{nation.id}}">{{nation.nationName}}</td>
+                                            <th>
+                                                <i id="edit_nation_{{nation.id}}" class="fa fa-edit cursor" ng-click="editNation(nation.id); edit_nation = true"></i>
+                                                <i id="save_edit_nation_{{nation.id}}" class="fa fa-save cursor" ng-click="saveEditNation(nation.id)" ng-if="edit_nation"></i>
+                                            </th>
+                                            <th><i class="fa fa-trash cursor" data-toggle="modal" data-target="#delete_nation" ng-click="comfirmDelete(nation.id)"></i></th>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="delete_nation">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close_modal_delete_nation"><span aria-hidden="true">×</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa quốc gia này</h4>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                                <button type="button" class="btn btn-primary" ng-click="deleteNation(comfirmDeleteId)">Xóa</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="delete_continent">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close_modal_delete_continent"><span aria-hidden="true">×</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa quốc gia này</h4>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                                <button type="button" class="btn btn-primary" ng-click="deletePartner(comfirmDeleteId)">Xóa</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
