sua lai all partner

--- a/app/main/views/partner/partner.all.html
+++ b/app/main/views/partner/partner.all.html
@@ -297,7 +297,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="even pointer" ng-repeat="partner in filtered = allContract | filter : search |
+                            <tr class="even pointer" ng-repeat="partner in filtered = allPartner | filter : search |
                                 startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
                                 <!-- <td class="a-center "> -->
                                 <!-- <input type="checkbox" class="flat" name="table_records"> -->
