--- a/app/main/views/contract/contract.html
+++ b/app/main/views/contract/contract.html
@@ -90,8 +90,8 @@
                                 <td class=" ">{{contract.uetMan.uetManName}}</td>
                                 <td class=" ">{{contract.contentContract}}</td>
                                 <td class=" ">{{contract.funding}}</td>
-                                <td class=" ">{{contract.startDate}}</td>
-                                <td class=" ">{{contract.endDate}}</td>
+                                <td class=" ">{{contract.startDate | date:'dd/MM/yyyy'}}</td>
+                                <td class=" ">{{contract.endDate | date:'dd/MM/yyyy'}}</td>
                                 <td class=" ">{{contract.unitName.unitName}}</td>
                                 <td class=" ">{{contract.result}}</td>
                                 <td class=" ">{{contract.notice}}</td>
@@ -123,7 +123,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Nội dung hợp tác: </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="last-name" name="last-name" class="form-control col-md-7 col-xs-12" ng-model="editContractData.contentContract">
+                                            <input type="text" class="form-control col-md-7 col-xs-12" ng-model="editContractData.contentContract">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -144,6 +144,18 @@
                                             <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="editContractData.result">
                                         </div>
                                     </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Ngày ký: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="date" class="form-control col-md-7 col-xs-12" ng-model="editContractData.startDate">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Ngày hết hiệu lựu: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="date" class="form-control col-md-7 col-xs-12" ng-model="editContractData.endDate">
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                             <div class="modal-footer">
@@ -155,7 +167,7 @@
                 </div>
                 <!-- end edit partner info -->
                 <!-- them hop dong -->
-                <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true" id="add_contract" ng-init="getAllPartner(); getAllUnit(); getAllUetMan(); getAllTypeContract()">
+                <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true" id="add_contract" ng-init="getAllPartner(); getAllUnitName(); getAllUetMan(); getAllTypeContract()">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -218,13 +230,31 @@
                                     <div class="form-group">
                                         <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Nội dung hợp tác chính: </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="last-name" name="last-name" class="form-control col-md-7 col-xs-12" ng-model="input.contentContract">
+                                            <input type="text" class="form-control col-md-7 col-xs-12" ng-model="input.contentContract">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Kinh phí: </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="last-name" name="last-name" class="form-control col-md-7 col-xs-12" ng-model="input.funding">
+                                            <input type="text" class="form-control col-md-7 col-xs-12" ng-model="input.funding">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Lưu ý: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="text" class="form-control col-md-7 col-xs-12" ng-model="input.notice">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Ngày ký: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="date" class="form-control col-md-7 col-xs-12" ng-model="input.startDate">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Ngày hết hiệu lựu: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="date" class="form-control col-md-7 col-xs-12" ng-model="input.endDate">
                                         </div>
                                     </div>
                                 </form>
